--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,6 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {},
-    "docgen": {},
-    "verify": {}
+    "docgen": {}
   }
 }
