--- a/packages/sparse-set/package.json
+++ b/packages/sparse-set/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@astrocreep/sparse-set",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "sparse set implementation",
   "type": "module",
   "files": [
@@ -31,12 +31,16 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "vitest --coverage"
+    "test": "vitest --coverage",
+    "release": "release-it"
   },
   "devDependencies": {
+    "@release-it/keep-a-changelog": "^5.0.0",
     "@repo/tsconfig": "workspace: *",
     "@vitest/coverage-v8": "2.1.8",
     "keep-a-changelog": "^2.5.3",
+    "release-it": "^17.11.0",
+    "release-it-pnpm": "^4.6.3",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   }
